--- a/package.json
+++ b/package.json
@@ -1,61 +1,70 @@
 {
-  "name": "client",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
-    "@material-ui/core": "^4.11.2",
-    "@material-ui/icons": "^4.11.2",
-    "@mui/icons-material": "^5.2.5",
-    "@mui/material": "^5.2.7",
-    "@mui/styles": "^5.2.3",
-    "axios": "^0.21.1",
-    "chart.js": "^2.9.4",
-    "chartjs-plugin-datalabels": "^0.7.0",
-    "dotenv": "^8.2.0",
-    "lodash": "^4.17.21",
-    "react": "^17.0.1",
-    "react-chartjs-2": "^2.11.1",
-    "react-dom": "^17.0.1",
-    "react-icons": "^4.1.0",
-    "web-vitals": "^0.2.4"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-react": "^1.0.7",
-    "eslint": "^8.2.0",
-    "eslint-config-airbnb": "19.0.4",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "husky": "^7.0.4",
-    "lint-staged": "^12.3.2",
-    "prettier": "^2.5.1",
-    "vite": "^2.7.2"
-  },
-  "scripts": {
-    "start": "vite",
-    "build": "vite build"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "airbnb"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "client",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@emotion/react": "^11.7.1",
+        "@emotion/styled": "^11.6.0",
+        "@material-ui/core": "^4.11.2",
+        "@material-ui/icons": "^4.11.2",
+        "@mui/icons-material": "^5.2.5",
+        "@mui/material": "^5.2.7",
+        "@mui/styles": "^5.2.3",
+        "axios": "^0.21.1",
+        "chart.js": "^2.9.4",
+        "chartjs-plugin-datalabels": "^0.7.0",
+        "dotenv": "^8.2.0",
+        "lodash": "^4.17.21",
+        "react": "^17.0.1",
+        "react-chartjs-2": "^2.11.1",
+        "react-dom": "^17.0.1",
+        "react-icons": "^4.1.0",
+        "web-vitals": "^0.2.4"
+    },
+    "devDependencies": {
+        "@vitejs/plugin-react": "^1.0.7",
+        "eslint": "^8.2.0",
+        "eslint-config-airbnb": "19.0.4",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-import": "^2.25.3",
+        "eslint-plugin-jsx-a11y": "^6.5.1",
+        "eslint-plugin-prettier": "^4.0.0",
+        "eslint-plugin-react": "^7.28.0",
+        "eslint-plugin-react-hooks": "^4.3.0",
+        "husky": "^7.0.4",
+        "lint-staged": "^12.3.2",
+        "prettier": "^2.5.1",
+        "vite": "^2.7.2"
+    },
+    "scripts": {
+        "start": "vite",
+        "build": "vite build",
+        "lint-staged": "lint-staged",
+        "postinstall": "husky install"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "airbnb"
+        ]
+    },
+    "lint-staged": {
+        "*.{css,scss}": "prettier --write",
+        "*.{js,jsx}": [
+            "eslint --fix",
+            "prettier --write"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    }
 }
