--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "chartjs-plugin-datalabels": "^0.7.0",
         "dotenv": "^8.2.0",
         "lodash": "^4.17.21",
+        "prop-types": "^15.8.1",
         "react": "^17.0.1",
         "react-chartjs-2": "^2.11.1",
         "react-dom": "^17.0.1",
