--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "@mui/icons-material": "^5.2.5",
         "@mui/material": "^5.2.7",
         "@mui/styles": "^5.2.3",
+        "@mui/system": "^5.3.0",
         "axios": "^0.21.1",
         "chart.js": "^2.9.4",
         "chartjs-plugin-datalabels": "^0.7.0",
