--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "react-chartjs-2": "^2.11.1",
         "react-dom": "^17.0.1",
         "react-icons": "^4.1.0",
+        "react-query": "^3.34.12",
         "react-router-dom": "^6.2.1",
         "web-vitals": "^0.2.4"
     },
