--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@material-ui/core": "^4.11.2",
         "@material-ui/icons": "^4.11.2",
         "@mui/icons-material": "^5.2.5",
+        "@mui/lab": "^5.0.0-alpha.67",
         "@mui/material": "^5.2.7",
         "@mui/styles": "^5.2.3",
         "@mui/system": "^5.3.0",
