--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
         "@mui/material": "^5.2.7",
         "@mui/styles": "^5.2.3",
         "@mui/system": "^5.3.0",
+        "@nivo/core": "^0.79.0",
+        "@nivo/line": "^0.79.1",
         "axios": "^0.21.1",
         "chart.js": "^2.9.4",
         "chartjs-plugin-datalabels": "^0.7.0",
