--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
         "axios": "^0.21.1",
         "chart.js": "^3.7.0",
         "chartjs-plugin-datalabels": "^2.0.0",
+        "dayjs": "^1.11.2",
         "dotenv": "^8.2.0",
         "lodash": "^4.17.21",
         "prop-types": "^15.8.1",
+        "qs": "^6.10.3",
         "react": "^17.0.1",
         "react-chartjs-2": "^4.0.1",
         "react-dom": "^17.0.1",
